Remove not selector and target OOUI icons for inversion only
A number of icons using the vector-icon class that have been converted
to codex are being double inverted by this rule.  Instead, switch it to
enumerate the full list of OOUI icons and invert them, so that
subsequent codex migrations can be easier as well

Also bumps the bundle size to account for the increase in bytes

Visual change for the table of contents arrows being fixed, ideally not
for anything else

Bug: T365951
Bug: T365580
Change-Id: Ia389e73c72432eb5f7a2df4ff9b48593751bc184

--- a/resources/skins.vector.styles/components/Icon.less
+++ b/resources/skins.vector.styles/components/Icon.less
@@ -14,8 +14,44 @@
 }
 
 // FIXME: T363920 Remove when all icons are migrated from ResourceLoader to Codex
-// Dont invert language icon because it is blue
-.vector-icon:not( .mw-ui-icon-wikimedia-language-progressive ) {
+//
+// enumerate full list of OOUI icons to be inverted rather than selecting on vector-icon alone
+// so as not to punish switching to codex
+.vector-icon.mw-ui-icon-wikimedia-article,
+.vector-icon.mw-ui-icon-wikimedia-edit,
+.vector-icon.mw-ui-icon-wikimedia-editLock,
+.vector-icon.mw-ui-icon-wikimedia-exitFullscreen,
+.vector-icon.mw-ui-icon-wikimedia-fullScreen,
+.vector-icon.mw-ui-icon-wikimedia-history,
+.vector-icon.mw-ui-icon-wikimedia-speechBubbles,
+.vector-icon.mw-ui-icon-wikimedia-speechBubbleAdd,
+.vector-icon.mw-ui-icon-wikimedia-wikiText,
+.vector-icon.mw-ui-icon-wikimedia-appearance,
+.vector-icon.mw-ui-icon-wikimedia-tray,
+.vector-icon.mw-ui-icon-wikimedia-bell,
+.vector-icon.mw-ui-icon-wikimedia-menu,
+.vector-icon.mw-ui-icon-wikimedia-heart,
+.vector-icon.mw-ui-icon-wikimedia-language,
+.vector-icon.mw-ui-icon-wikimedia-ellipsis,
+.vector-icon.mw-ui-icon-wikimedia-userAvatar,
+.vector-icon.mw-ui-icon-wikimedia-userAdd,
+.vector-icon.mw-ui-icon-wikimedia-userTemporary,
+.vector-icon.mw-ui-icon-wikimedia-userTalk,
+.vector-icon.mw-ui-icon-wikimedia-sandbox,
+.vector-icon.mw-ui-icon-wikimedia-search,
+.vector-icon.mw-ui-icon-wikimedia-settings,
+.vector-icon.mw-ui-icon-wikimedia-labFlask,
+.vector-icon.mw-ui-icon-wikimedia-star,
+.vector-icon.mw-ui-icon-wikimedia-halfStar,
+.vector-icon.mw-ui-icon-wikimedia-unStar,
+.vector-icon.mw-ui-icon-wikimedia-watchlist,
+.vector-icon.mw-ui-icon-wikimedia-userContributions,
+.vector-icon.mw-ui-icon-wikimedia-logIn,
+.vector-icon.mw-ui-icon-wikimedia-logOut,
+.vector-icon.mw-ui-icon-wikimedia-imageGallery,
+.vector-icon.mw-ui-icon-wikimedia-userGroup,
+.vector-icon.mw-ui-icon-wikimedia-listBullet,
+.vector-icon.mw-ui-icon-wikimedia-close {
 	html.skin-theme-clientpref-night & {
 		filter: invert( 1 );
 	}
