Remove external link variables, and replace content-links modules with Codex
Change-Id: I55d062de1624b77bc5214942368a3fbd545635df

--- a/resources/skins.vector.styles/skin.less
+++ b/resources/skins.vector.styles/skin.less
@@ -13,6 +13,7 @@
 	@import './layouts/toc/unpinned.less';
 	@import './normalize.less';
 	@import './typography.less';
+	@import './links.less';
 
 	// Components
 	@import './components/Dropdown.less';
