Add mw-no-invert and oo-ui-image-invert to OOUI icon exclusion list
This is used on Special:Block and the OOUI search widget for links

Bug: T368483
Change-Id: Iaae45a12029c26e4d2c793f4040c90df65495c02

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -7,7 +7,7 @@
  * This includes OOUI icons that are not colored (progressive/destructive), checkbox icons, and
  * indicator widgets.
  */
-@OOUIIconSelectors: ~'.oo-ui-iconElement-icon:not( .oo-ui-image-progressive ):not( .oo-ui-image-destructive ):not( .oo-ui-checkboxInputWidget-checkIcon )';
+@OOUIIconSelectors: ~'.oo-ui-iconElement-icon:not( .oo-ui-image-progressive ):not( .oo-ui-image-destructive ):not( .oo-ui-checkboxInputWidget-checkIcon ):not( .oo-ui-image-invert ):not( .mw-no-invert )';
 @OOUIIndicatorSelectors: ~'.oo-ui-indicatorElement-indicator';
 
 /**
