Follow-up to f115016 - Add beta tag & feedback link to Appearance menu
Addresses edge-cases for feedback link for dark-mode.
- Feedback link should not be visible if dark-mode gadget is enabled.
- Feedback link should not be visible if page is excluded from dark mode.

Additionally, turns feedback link green after click
and prevents further clicks on link (without removing link,
since removing the link changes the margins on the text)
and adds heart icon beside success message.

Bug: T367871
Change-Id: Idff14ffa7e8f497ec38250cf10252e998c234057

--- a/resources/skins.vector.clientPreferences/clientPreferences.less
+++ b/resources/skins.vector.clientPreferences/clientPreferences.less
@@ -1,6 +1,17 @@
+@import 'mediawiki.skin.variables.less';
+
 #vector-appearance {
 	form {
 		font-size: 0.875rem;
 		padding: 6px 0;
 	}
+}
+
+.vector-icon.vector-icon--heart {
+	.cdx-mixin-css-icon( @cdx-icon-heart, @color-success );
+}
+
+.skin-theme-beta-notice-success {
+	color: @color-success;
+	pointer-events: none;
 }
