--- a/resources/skins.vector.clientPreferences/clientPreferences.less
+++ b/resources/skins.vector.clientPreferences/clientPreferences.less
@@ -5,13 +5,13 @@
 		font-size: 0.875rem;
 		padding: 6px 0;
 	}
-}
 
-.vector-icon.vector-icon--heart {
-	.cdx-mixin-css-icon( @cdx-icon-heart, @color-success );
-}
+	a.skin-theme-beta-notice-success {
+		color: @color-success;
+		pointer-events: none;
+	}
 
-.skin-theme-beta-notice-success {
-	color: @color-success;
-	pointer-events: none;
+	.vector-icon.vector-icon--heart {
+		.cdx-mixin-css-icon( @cdx-icon-heart, @color-success, @size-icon-small );
+	}
 }
