Dark-mode feedback link UX improvements
- Makes the dark-mode feedback link (the "report a dark mode issue" )
link in the Appearance menu, only appear when dark-mode is activated.
- Keeps the Appearance dropdown menu open after the dark-mode feedback
link has been clicked.

Bug: T367871
Change-Id: I75d040650f613a7af5db553689d734e56f910431

--- a/resources/skins.vector.clientPreferences/clientPreferences.less
+++ b/resources/skins.vector.clientPreferences/clientPreferences.less
@@ -15,3 +15,19 @@
 		.cdx-mixin-css-icon( @cdx-icon-heart, @color-success, @size-icon-small );
 	}
 }
+
+// Only display feedback notice in dark mode.
+// https://phabricator.wikimedia.org/T367871#10003064
+#skin-theme-beta-notice {
+	display: none;
+}
+
+@media screen and ( prefers-color-scheme: dark ) {
+	html.skin-theme-clientpref-os #skin-theme-beta-notice {
+		display: block;
+	}
+}
+
+html.skin-theme-clientpref-night #skin-theme-beta-notice {
+	display: block;
+}
