Dark mode: Images should have background
Bug: T370074
Change-Id: Ibd49b2ccfa77d4f0e677e0726738c831ad962c28

--- a/resources/skins.vector.styles/skin.less
+++ b/resources/skins.vector.styles/skin.less
@@ -14,6 +14,7 @@
 	@import './normalize.less';
 	@import './typography.less';
 	@import './links.less';
+	@import './media.less';
 
 	// Components
 	@import './components/Dropdown.less';
