Prevent dark-mode styles from affecting print media
Prevents dark-mode styles from affecting print media
by adding `@media screen` to dark-mode related styles.

Bug: T371331
Change-Id: I2ed7fbfc078c6d738c13a71c677783f7ccea2582

--- a/resources/skins.vector.styles/components/Icon.less
+++ b/resources/skins.vector.styles/components/Icon.less
@@ -52,8 +52,10 @@
 .vector-icon.mw-ui-icon-wikimedia-userGroup,
 .vector-icon.mw-ui-icon-wikimedia-listBullet,
 .vector-icon.mw-ui-icon-wikimedia-close {
-	html.skin-theme-clientpref-night & {
-		filter: invert( 1 );
+	@media screen {
+		html.skin-theme-clientpref-night & {
+			filter: invert( 1 );
+		}
 	}
 
 	/**
@@ -61,7 +63,7 @@
 	 *
 	 * Applies the night mode color palette only in response to system settings.
 	 */
-	@media ( prefers-color-scheme: dark ) {
+	@media screen and ( prefers-color-scheme: dark ) {
 		html.skin-theme-clientpref-os & {
 			filter: invert( 1 );
 		}
