--- a/skinStyles/ext.visualEditor.less
+++ b/skinStyles/ext.visualEditor.less
@@ -6,14 +6,16 @@ html.ve-activated {
 	}
 
 	// T367822
-	&.skin-theme-clientpref-night {
-		.ve-ce-branchNode-blockSlug,
-		body p.ve-ce-branchNode-newSlug {
-			background-color: rgba( 241, 247, 251, 0.1 );
+	@media screen {
+		&.skin-theme-clientpref-night {
+			.ve-ce-branchNode-blockSlug,
+			body p.ve-ce-branchNode-newSlug {
+				background-color: rgba( 241, 247, 251, 0.1 );
+			}
 		}
 	}
 
-	@media ( prefers-color-scheme: dark ) {
+	@media screen and ( prefers-color-scheme: dark ) {
 		&.skin-theme-clientpref-os {
 			.ve-ce-branchNode-blockSlug,
 			body p.ve-ce-branchNode-newSlug {
