Revert "Prevent dark-mode styles from affecting print media"
This reverts commit b3ca12e628205ee2ffa02c0ca6ffa4d230119a2e.

Reason for revert: Icons are appearing black on black in dark mode
in origin/wmf/1.43.0-wmf.18.

Change-Id: Ifdf3970c77b66e5a7835ca44eb45deec2b44eb43

--- a/resources/skins.vector.styles/components/Icon.less
+++ b/resources/skins.vector.styles/components/Icon.less
@@ -52,10 +52,8 @@
 .vector-icon.mw-ui-icon-wikimedia-userGroup,
 .vector-icon.mw-ui-icon-wikimedia-listBullet,
 .vector-icon.mw-ui-icon-wikimedia-close {
-	@media screen {
-		html.skin-theme-clientpref-night & {
-			filter: invert( 1 );
-		}
+	html.skin-theme-clientpref-night & {
+		filter: invert( 1 );
 	}
 
 	/**
@@ -63,7 +61,7 @@
 	 *
 	 * Applies the night mode color palette only in response to system settings.
 	 */
-	@media screen and ( prefers-color-scheme: dark ) {
+	@media ( prefers-color-scheme: dark ) {
 		html.skin-theme-clientpref-os & {
 			filter: invert( 1 );
 		}
