--- a/resources/skins.vector.styles/media.less
+++ b/resources/skins.vector.styles/media.less
@@ -22,13 +22,11 @@
 	}
 }
 
-@media screen {
-	html.skin-theme-clientpref-night {
-		.dark-mode-image-styles();
-	}
+html.skin-theme-clientpref-night {
+	.dark-mode-image-styles();
 }
 
-@media screen and ( prefers-color-scheme: dark ) {
+@media ( prefers-color-scheme: dark ) {
 	html.skin-theme-clientpref-os {
 		.dark-mode-image-styles();
 	}
