Language button dropdown arrow should be progressive color
Currently black.
Flagged by Pixel.
Follow up to 010e7e92d

Bug: T363920
Change-Id: Iaa9ea69c8a1f1b50bb8eedda1acc2c657bef0132

--- a/resources/skins.vector.styles/components/LanguageDropdown.less
+++ b/resources/skins.vector.styles/components/LanguageDropdown.less
@@ -26,6 +26,7 @@
 		// T291286: Temporarily use progressive ULS style
 		&.cdx-button--action-progressive.cdx-button--weight-quiet::after {
 			mask-image: url( ./images/arrow-down-progressive.svg );
+			background-color: @color-progressive;
 			opacity: @opacity-base;
 		}
 	}
