Fixes: Echo icon not visible after click
Due to T343838, we need to adjust the Echo icon after clicking
so it renders consistently with Codex. This is a longstanding bug
and a slight adjustment to how we approach the icon now that Codex
and Vector 2022 use mask-image for their icons.

Bug: T373936
Change-Id: Icdb9cc49c157cb5cbf13fe1f7d5e91b7e986e92e

--- a/skinStyles/ext.echo.styles.badge.less
+++ b/skinStyles/ext.echo.styles.badge.less
@@ -49,6 +49,13 @@
 	display: inline-flex;
 	margin: 0;
 	opacity: 1;
+	// Workaround T343838.
+	// The OOUI icon uses the ::after pseudo element so will not work with mask image.
+	// Because of this we disable the mask image rule.
+	/* stylelint-disable declaration-no-important */
+	-webkit-mask-image: none !important;
+	mask-image: none !important;
+	/* stylelint-enable declaration-no-important */
 	// T341490 We are incorrectly applying Codex icon and button styles on the
 	// same element because ULS frequently overwrites the contents of the element
 	// so it is too difficult to maintain the correct markup. Because we are mixing
