--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -57,7 +57,7 @@
 	.vector-menu-content-list {
 		display: flex;
 		align-items: center;
-		font-size: @font-size-base;
+		font-size: @font-size-small;
 	}
 
 	.user-links-collapsible-item {
@@ -93,7 +93,7 @@
  * Logged-in user-page link in personal (overflow) menu.
  */
 #pt-userpage-2 {
-	max-width: unit( 155 / @font-size-browser / @font-size-base, em );
+	max-width: unit( 155 / @font-size-browser / @font-size-small, em );
 	overflow: hidden;
 	text-overflow: ellipsis;
 
@@ -109,6 +109,6 @@
 	// T287522#7295558: Increase the max-width of the username when viewport
 	// allows for it.
 	@media ( min-width: @min-width-breakpoint-desktop-wide ) {
-		max-width: unit( 200 / @font-size-browser / @font-size-base, em );
+		max-width: unit( 200 / @font-size-browser / @font-size-small, em );
 	}
 }
