--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -90,7 +90,7 @@ body {
 // are rendered.
 #contentSub:not( :empty ),
 #contentSub2 {
-	font-size: unit( @font-size-small, rem );
+	font-size: @font-size-small;
 	color: @color-subtle;
 	width: auto;
 	// Visually separate #contentSub and #contentSub2 (T315639)
