--- a/resources/skins.vector.styles/typography.less
+++ b/resources/skins.vector.styles/typography.less
@@ -177,7 +177,7 @@ pre,
 // T335625 - Move siteSub into common.less to prevent it from being feature-flagged
 // and overriding on-wiki modifications.
 #siteSub {
-	font-size: unit( @font-size-small, rem ); // T311421
+	font-size: @font-size-small; // T311421
 	// By default the sitesub (i.e. tagline) is hidden as it was hidden in Vector legacy but site styles can reveal.
 	display: none;
 }
