--- a/resources/skins.vector.styles/components/Dropdown.less
+++ b/resources/skins.vector.styles/components/Dropdown.less
@@ -14,6 +14,10 @@
 		.mixin-vector-arrowed-dropdown-toggle();
 	}
 
+	.vector-dropdown-label-text {
+		font-size: @font-size-dropdown;
+	}
+
 	/**
 	 * Invisible checkbox covering the dropdown toggle button.
 	 */
