--- a/resources/skins.vector.styles/variables.less
+++ b/resources/skins.vector.styles/variables.less
@@ -22,7 +22,6 @@
 // https://gerrit.wikimedia.org/r/plugins/gitiles/design/codex/+/refs/heads/main/packages/codex-design-tokens/src/theme-wikimedia-ui.json#429
 // See also Vector's 'mediawiki.skin.variables.less' overrides.
 
-@font-size-base: unit( 14 / @font-size-browser, em ); // Equals `0.875em`.
 @font-size-reset: @font-size-root;
 @font-size-heading-1: 1.8em;
 @font-size-heading-2: 1.5em;
@@ -78,7 +77,7 @@
 @padding-horizontal-dropdown-menu: 16px;
 @padding-vertical-dropdown-menu: 16px;
 @padding-vertical-dropdown-menu-item: 6px;
-@font-size-dropdown: unit( @font-size-base, rem ); // Equals `0.875rem`.
+@font-size-dropdown: @font-size-small;
 
 // TOC
 @size-toc-subsection-toggle: 22px;
@@ -86,7 +85,7 @@
 @toc-list-item-padding-start: 12px;
 
 // Search
-@max-width-search: unit( 500px / @font-size-browser / @font-size-base, em ); // 35.71428571em @ 16 & 0.875em T270202
+@max-width-search: unit( 500px / @font-size-browser / @font-size-small, em ); // 35.71428571em @ 16 & 0.875em T270202
 @min-width-search-button: 28px;
 @width-search-button: unit( 28 / @font-size-browser / @font-size-search-input, em );
 @font-size-search-input: unit( 13 / @font-size-browser, em ); // Equals `0.8125em`.
