--- a/skinStyles/ext.echo.styles.badge.less
+++ b/skinStyles/ext.echo.styles.badge.less
@@ -14,8 +14,8 @@
 		position: absolute;
 		left: 55%;
 		top: 43%;
-		font-size: unit( ( 12 / 16 ) * @font-size-base, rem );
-		padding: 0 unit( ( 4 / 16 ) * @font-size-base, rem );
+		font-size: unit( ( 12 / 16 ) * @font-size-small, rem );
+		padding: 0 unit( ( 4 / 16 ) * @font-size-small, rem );
 		border: 1px solid #fff;
 		border-radius: @border-radius-base;
 		background-color: #72777d;
