component: notheme isn’t respected for text color in automatic night mode
More details. Fix for notheme text color issue in automatic night mode

Bug: T374794
Change-Id: I673c11789ab57fe70ed3557d294da65f6d9cc58d

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -111,6 +111,7 @@
 
 	html.skin-theme-clientpref-os .notheme {
 		color-scheme: light;
+		color: var( --color-base );
 	}
 
 	// T365102 invert class specifically for image related elements
