Add `cursor:inherit` to `.mw-selflink`
Add `cursor: inherit;` to the class `mw-selflink` to get back
the expected behaviour of these 'links'.

Bug: T375876
Change-Id: I52d54dc1265fd1a64bc461892e69475a3b3d50b2

--- a/resources/skins.vector.styles/links.less
+++ b/resources/skins.vector.styles/links.less
@@ -44,6 +44,10 @@ a.mw-selflink {
 	color: inherit;
 	font-weight: bold;
 	text-decoration: inherit;
+
+	&:hover {
+		cursor: inherit;
+	}
 }
 
 /* Underline preference */
