Disable initial animation of watch star
Bug: T376559
Change-Id: I6a23dbfc6cae125db5ef0e83739593795b7f467c

--- a/resources/skins.vector.styles/components/Watchstar.less
+++ b/resources/skins.vector.styles/components/Watchstar.less
@@ -6,7 +6,7 @@
 // Note: there's no watchstar for anon users so no need to worry about cached HTML when changing this class
 // Loading watchstar link class.
 .mw-watchlink {
-	.vector-icon {
+	.vector-animations-ready & .vector-icon {
 		transition: transform 500ms;
 	}
 
