Reverse the watch star animation for RTL
Bug: T376898
Change-Id: I7863cab67702121c95cdb4ecac6dbf7431ebe30f

--- a/resources/skins.vector.styles/components/Watchstar.less
+++ b/resources/skins.vector.styles/components/Watchstar.less
@@ -10,7 +10,11 @@
 		transition: transform 500ms;
 	}
 
-	.mw-ui-icon-wikimedia-unStar {
+	[ dir='ltr' ] & .mw-ui-icon-wikimedia-unStar {
 		transform: rotate( 72deg );
+	}
+
+	[ dir='rtl' ] & .mw-ui-icon-wikimedia-unStar {
+		transform: rotate( -72deg );
 	}
 }
