More effective use of Less in Watchstar.less
And just to make it more similar with
https://gerrit.wikimedia.org/r/plugins/gitiles/mediawiki/skins/MinervaNeue/+/3d1cbeb8/resources/skins.minerva.base.styles/watchStar.less#11

Change-Id: Iefd4ce2982e76c3c34eb4af39b0b9d544ea4d94d

--- a/resources/skins.vector.styles/components/Watchstar.less
+++ b/resources/skins.vector.styles/components/Watchstar.less
@@ -10,11 +10,13 @@
 		transition: transform 500ms;
 	}
 
-	[ dir='ltr' ] & .mw-ui-icon-wikimedia-unStar {
-		transform: rotate( 72deg );
-	}
+	.mw-ui-icon-wikimedia-unStar {
+		[ dir='ltr' ] & {
+			transform: rotate( 72deg );
+		}
 
-	[ dir='rtl' ] & .mw-ui-icon-wikimedia-unStar {
-		transform: rotate( -72deg );
+		[ dir='rtl' ] & {
+			transform: rotate( -72deg );
+		}
 	}
 }
