Legacy Vector: Support bottom dock menu
Depends-On: Ibabb872e9f95a0c0d3bfd201b7181e9f3a20399d
Bug: T385298
Change-Id: I27f86d93ae10d04086126abeba15476583d2f243

--- a/resources/skins.vector.legacy.js/bottomDock.less
+++ b/resources/skins.vector.legacy.js/bottomDock.less
@@ -1,8 +1,6 @@
 @import 'mediawiki.skin.variables.less';
 
-/* FIXME: Remove vector-settings class when cache cleared. */
-.client-js .mw-portlet-dock-bottom,
-.client-js .vector-settings {
+.client-js .mw-portlet-dock-bottom {
 	display: block;
 	position: fixed;
 	bottom: 8px;
