styles: Remove outdated IE-specific code
No basic support for any IE anymore \o/
Time to remove the last bits of IE-specific code from Vector.

Bug: T306486
Bug: T365759
Change-Id: I4b52f265215b88dfc722771f636c98a3b2fda165

--- a/resources/skins.vector.styles.legacy/components/LegacySidebar.less
+++ b/resources/skins.vector.styles.legacy/components/LegacySidebar.less
@@ -44,7 +44,7 @@
 		font-size: @font-size-nav-main-heading;
 		font-weight: normal;
 		cursor: default;
-		background-image: linear-gradient( to right, @border-color-subtle-transparent 0, @border-color-subtle 33%, @border-color-subtle 66%, @border-color-subtle-transparent 100% ); // Standard (Firefox 16+, IE 10+, Safari 6.1+, Chrome 26+)
+		background-image: linear-gradient( to right, @border-color-subtle-transparent 0, @border-color-subtle 33%, @border-color-subtle 66%, @border-color-subtle-transparent 100% );
 		background-position: center bottom;
 		background-repeat: no-repeat;
 		background-size: 100% @border-width-base;
