Add parenthesis for all division
Bug: T382931
Change-Id: I70da7705846ad722f7976ab45d1f5adbc1499ac0

--- a/resources/skins.vector.styles.legacy/components/MenuTabs.less
+++ b/resources/skins.vector.styles.legacy/components/MenuTabs.less
@@ -43,7 +43,7 @@
 			box-sizing: border-box;
 			display: block;
 			float: left;
-			height: unit( 40 / @font-size-tabs / @font-size-browser, em );
+			height: unit( ( 40 / @font-size-tabs / @font-size-browser ), em );
 			position: relative;
 			padding-top: 1.25em;
 			padding-left: @padding-horizontal-tabs;
