--- a/resources/skins.vector.styles/components/Header.less
+++ b/resources/skins.vector.styles/components/Header.less
@@ -27,7 +27,7 @@
 		display: inline-flex;
 		float: right;
 		// Ensures the button has a font size of 16px
-		font-size: unit( 16 / @font-size-browser, rem );
+		font-size: unit( ( 16 / @font-size-browser ), rem );
 
 		@media ( min-width: @min-width-breakpoint-desktop ) {
 			// Override .cdx-button styles
