--- a/resources/skins.vector.styles/components/Logo.less
+++ b/resources/skins.vector.styles/components/Logo.less
@@ -14,7 +14,7 @@
 	margin-right: 10px;
 	// Hide mobile icon at lower resolutions and defer to wordmark
 	display: none;
-	@size-mw-logo-icon: unit( 50 / @font-size-browser, em );
+	@size-mw-logo-icon: unit( ( 50 / @font-size-browser ), em );
 	width: @size-mw-logo-icon;
 	height: @size-mw-logo-icon;
 
