--- a/resources/skins.vector.styles/components/PageToolbar.less
+++ b/resources/skins.vector.styles/components/PageToolbar.less
@@ -1,4 +1,4 @@
-@border-base-ems: unit( @border-width-base / @font-size-browser / @font-size-small, em );
+@border-base-ems: unit( ( @border-width-base / @font-size-browser / @font-size-small ), em );
 
 .vector-page-toolbar-container {
 	display: flex;
