--- a/resources/skins.vector.styles.legacy/components/LegacySidebar.less
+++ b/resources/skins.vector.styles.legacy/components/LegacySidebar.less
@@ -1,7 +1,7 @@
 // Navigation: Main
 @font-size-nav-main: inherit;
-@font-size-nav-main-heading: unit( 12 / @font-size-browser, em ); // Equals `0.75em`.
-@font-size-nav-main-body: unit( 12 / @font-size-browser, em );
+@font-size-nav-main-heading: unit( ( 12 / @font-size-browser ), em ); // Equals `0.75em`.
+@font-size-nav-main-body: unit( ( 12 / @font-size-browser ), em );
 @margin-start-nav-main-body: 0.5em;
 @border-color-subtle-transparent: rgba( red( @border-color-subtle ), green( @border-color-subtle ), blue( @border-color-subtle ), 0 );
 // Margin space from the start of the Portal (left edge in LTR
