Fix missing parens in TableOfContents.less
Bug: T388475
Bug: T382931
Change-Id: Ibfd1c48945cb05b91f4f17bc2f1f748a019c7ec3

--- a/resources/skins.vector.styles/components/TableOfContents.less
+++ b/resources/skins.vector.styles/components/TableOfContents.less
@@ -16,7 +16,7 @@
 		display: none;
 		transition: @transition-duration-base;
 		position: absolute;
-		left: -@size-toc-subsection-toggle/2;
+		left: (-@size-toc-subsection-toggle/2);
 		// Visual centering.
 		top: 1px;
 		// Override .cdx-button styles
