styles: Update `unit()` calls
The introduction of font modes in Codex[1] will change some
design tokens from raw values to CSS custom properties, which
will not work inside Less's `unit()` function. This patch
updates all `unit()` calls with affected tokens. The goal is
to output the same effective value for each calculation:

- Set `@max-width-search` to the rem equivalent of 500px
  (instead of ems). This means the max-width will not
  change per font mode, but will scale with browser font size.
- Similarly, set the `max-width` of the user-page link to its
  rem equivalent.
- Simplify the calculation of font-size and padding for the
  notifications badge text. We don't need `unit()` here since
  we're aiming for rems and the `@font-size-small` token is in
  rems.

[1] https://gerrit.wikimedia.org/r/c/design/codex/+/1123503

Bug: T389458
Change-Id: I119e5869ce8d11fb6377d84a3f11855b589fc9d4

--- a/resources/skins.vector.styles/variables.less
+++ b/resources/skins.vector.styles/variables.less
@@ -85,7 +85,7 @@
 @toc-list-item-padding-start: 12px;
 
 // Search
-@max-width-search: unit( ( 500px / @font-size-browser / @font-size-small ), em ); // 35.71428571em @ 16 & 0.875em T270202
+@max-width-search: unit( ( 500px / @font-size-browser ), rem ); // 31.25rem @ 16 T270202
 @min-width-search-button: 28px;
 @width-search-button: unit( ( 28 / @font-size-browser / @font-size-search-input ), em );
 @font-size-search-input: unit( ( 13 / @font-size-browser ), em ); // Equals `0.8125em`.
