--- a/resources/mediawiki.less/vector/mediawiki.skin.variables.less
+++ b/resources/mediawiki.less/vector/mediawiki.skin.variables.less
@@ -15,6 +15,12 @@
 // FIXME: Use WikimediaUI Base's OS specific default sans-serif fonts.
 @font-family-sans: sans-serif; // Codex: 'Helvetica Neue', 'Helvetica', 'Liberation Sans', 'Arial', sans-serif;
 
+// Line height specific former values in preparation of new font modes, see T389900.
+// TODO: These variables can be removed once the new font modes typographic styles are
+// fully implemented.
+@line-height-xx-small: 1.375;
+@line-height-medium: 1.6;
+
 // Overrides for non-Codex variables:
 
 // Set pre July 2022 colors for links (T213778).
