--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -5,10 +5,6 @@
  * The rules here should only define the layout, not color or typography.
  */
 
-html {
-	scroll-padding-top: @scroll-padding-top;
-}
-
 body {
 	background-color: @background-color-secondary--modern;
 	color: @color-base;
@@ -37,6 +33,18 @@ body {
 /* Content */
 .mw-indicators {
 	z-index: @z-index-indicators;
+}
+
+.mw-heading {
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		// T314419 - See the comment on the LESS variable
+		scroll-margin-top: @scroll-margin-heading;
+	}
 }
 
 .vector-page-titlebar {
