Styles: Update file name for Codex Less mixins
Bug: T392829
Depends-On: I700c27fb437d253eec0c399546681c50af7b3cb3
Change-Id: Ida516e818f7898604e315375c404af398ee8a977

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.skin.variables.less';
 @import 'mediawiki.skin.codex-design-tokens/theme-wikimedia-ui-mixin-dark.less';
-// @import 'mediawiki.skin.codex-design-tokens/theme-wikimedia-ui-reset.less';
+@import 'mediawiki.skin.codex-design-tokens/theme-wikimedia-ui-mixin-light.less';
 
 /**
  * T365764 - OOUI Icon classes for inverted dark-mode icons.
@@ -17,11 +17,11 @@
 	 * Applies the light mode color palette by default
 	 * or with the .skin-invert, or .notheme classes
 	 */
-	// :root,
-	// .skin-invert,
-	// .notheme {
-	// 	.cdx-mode-reset();
-	// }
+	:root,
+	.skin-invert,
+	.notheme {
+		.cdx-mode-light();
+	}
 
 	/**
 	 * Forced night mode.
