--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -81,22 +81,29 @@
 	/**
 	 * Font size settings
 	 *
-	 * TODO: Temporary workaround to prevent Codex messages from scaling with text size T391890.
+	 * Notes:
+	 * `.mw-body-content .cdx-message` selector:
+	 * Temporary workaround to prevent Codex messages from scaling with text size T391890.
 	 * Remove the workaround once font size modes are fully integrated in Vector.
+	 *
+	 * `.no-font-mode-scale` (@unstable) selector:
+	 * Temporary and not be considered stable class, which is not designed for use in
+	 * article content.
 	 */
-	.vector-feature-custom-font-size-clientpref--excluded,
-	.vector-feature-custom-font-size-clientpref-0,
+	html.vector-feature-custom-font-size-clientpref--excluded,
+	html.vector-feature-custom-font-size-clientpref-0,
+	.no-font-mode-scale,
 	.mw-body-content .cdx-message {
 		--font-size-medium: @font-size-small;
 		--line-height-medium: @line-height-small;
 	}
 
-	.vector-feature-custom-font-size-clientpref-1 {
+	html.vector-feature-custom-font-size-clientpref-1 {
 		--font-size-medium: @font-size-medium;
 		--line-height-medium: @line-height-medium;
 	}
 
-	.vector-feature-custom-font-size-clientpref-2 {
+	html.vector-feature-custom-font-size-clientpref-2 {
 		--font-size-medium: @font-size-x-large;
 		--line-height-medium: 1.5;
 	}
