Temporarily support cached HTML opt-out of font sizes.
Add back the vector-feature-custom-font-size-clientpref--exclude
rule with a FIXME as we have pages in cache serving the old class.

Follow up to  Ie0a32804199d4ab4a0fccf7358303b284b00a09e

Change-Id: I375ac09372475f2ec83a0e4d3f2b7dd5eaebf311

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -91,6 +91,8 @@
 	 * article content.
 	 */
 	html.vector-feature-custom-font-size-clientpref--excluded,
+	/* FIXME: Remove in 2 weeks time. This is for cache HTML only. */
+	.vector-feature-custom-font-size-clientpref--excluded,
 	html.vector-feature-custom-font-size-clientpref-0,
 	.no-font-mode-scale,
 	.mw-body-content .cdx-message {
