styles: Fix blurry sizing of `.vector-icon`s by setting its size to 1rem
Fixing by add `.vector-icon` to `--font-size-medium: @font-size-medium;`
definition for the time being. This is a temporary fix until we revisit
the integration of font modes and the question of Vector interface
scaling.

Bug: T394091
Change-Id: I16a66744c1fcc2e4a842693388a55ced2c3a03ae

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -100,7 +100,9 @@
 		--line-height-medium: @line-height-small;
 	}
 
-	html.vector-feature-custom-font-size-clientpref-1 {
+	html.vector-feature-custom-font-size-clientpref-1,
+	/* FIXME: Set `.vector-icon` to medium equal to 20x20 px, see T394091. */
+	.vector-icon {
 		--font-size-medium: @font-size-medium;
 		--line-height-medium: @line-height-medium;
 	}
