styles: Replace `line-height-base` with fine-tuned `line-height-content`
This is a stop-gap measurement in order to rollout Codex 2.0.0
with only minimally subtle visual changes and before we
apply Codex font-modes in CSSCustomProperties.less.

Bug: T394866
Change-Id: I894cb883e250756e78ff2ac939e0d3071939e2a9
Depends-On: I0dd356779d814519ebb54aeafd40dcf6c6fcfe42

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -98,6 +98,9 @@
 	.mw-body-content .cdx-message {
 		--font-size-medium: @font-size-small;
 		--line-height-medium: @line-height-small;
+		// Use for user-generated content that comes from outside of the design system.
+		// TODO: Remove once font size modes are fully integrated in Vector.
+		--line-height-content: 1.5714285;
 	}
 
 	html.vector-feature-custom-font-size-clientpref-1,
@@ -105,11 +108,17 @@
 	.vector-icon {
 		--font-size-medium: @font-size-medium;
 		--line-height-medium: @line-height-medium;
+		// Use for user-generated content that comes from outside of the design system.
+		// TODO: Remove once font size modes are fully integrated in Vector.
+		--line-height-content: 1.625;
 	}
 
 	html.vector-feature-custom-font-size-clientpref-2 {
 		--font-size-medium: @font-size-x-large;
 		--line-height-medium: 1.5;
+		// Use for user-generated content that comes from outside of the design system.
+		// TODO: Remove once font size modes are fully integrated in Vector.
+		--line-height-content: 1.55;
 	}
 }
 
